--- a/.env.test
+++ b/.env.test
@@ -5,3 +5,4 @@ VUE_APP_NETWORK=12345
 VUE_APP_BLOCKNATIVE_DAPP_ID=032e2fb8-6c66-46a5-bf1c-a049ac7eded2
 VUE_APP_FATHOM_SITE_ID=xxx
 SUBGRAPH_URL=https://api.thegraph.com/subgraphs/name/balancer-labs/balancer-kovan-v2
+DEFI FORK PROJECT
